tests/neg-custom-args/captures/mutability2.scala
object Test22:
  var ctr = 0  // error
